# HangmanGame

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  worlds_list.txt
include/: game.h  launcher.h
src/: game.c  launcher.c
